--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-
+    <div class="header">
+        <div class="logo">
+            <img src="assets/magnifier 1.png" alt="">
+            Jumystap
+        </div>
+        <div class="menu">
+            <button>Home</button>
+            <button>About us</button>
+            <button>How it works</button>
+            <button>Get Started</button>
+        </div>
+    </div>
 </body>
 
 </html>
