--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
     <link rel="stylesheet" href="./index.css">
+    <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
 </head>
 
 <body>
     <div class="header">
         <div class="logo">
-            <img src="assets/magnifier 1.png" alt="">
-            Jumystap
+            <img src="assets/magnifier 1.png" alt="magnifier" id="magnifier">
+            <p id="jumystap">JumysTap</p>
         </div>
         <div class="menu">
             <button>Home</button>
@@ -20,6 +21,12 @@
             <button>How it works</button>
             <button>Get Started</button>
         </div>
+    </div>
+    <div class="description">
+
+    </div>
+    <div class="how_it_works">
+
     </div>
 </body>
 
