--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1</title>
     <link rel="stylesheet" href="./index.css">
     <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="icon" href="https://www.iconpacks.net/icons/2/free-magnifier-icon-2915-thumb.png" type="image/x-icon">
+    <title>JumysTap</title>
 </head>
 
 <body>
@@ -19,11 +21,16 @@
             <button>Home</button>
             <button>About us</button>
             <button>How it works</button>
-            <button>Get Started</button>
+            <button id="get_started">Get Started</button>
         </div>
     </div>
     <div class="description">
-
+        <div class="info">
+            <h1>Get hired for your skills, not experience</h1>
+        </div>
+        <div class="visual_content">
+            <h1></h1>
+        </div>
     </div>
     <div class="how_it_works">
 
