--- a/index.html
+++ b/index.html
@@ -1,53 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./index.css" />
-        <link
-            href="https://fonts.googleapis.com/css?family=Kanit"
-            rel="stylesheet"
-        />
-        <link
-            href="https://fonts.googleapis.com/css?family=Inter"
-            rel="stylesheet"
-        />
-        <link
-            rel="icon"
-            href="https://www.iconpacks.net/icons/2/free-magnifier-icon-2915-thumb.png"
-            type="image/x-icon"
-        />
-        <title>JumysTap</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Kanit"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Inter"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      href="https://www.iconpacks.net/icons/2/free-magnifier-icon-2915-thumb.png"
+      type="image/x-icon"
+    />
+    <title>JumysTap</title>
+  </head>
 
-    <body>
-        <header class="navbar">
-            <div class="logo">
-                <img
-                    src="images/magnifier 1.png"
-                    alt="magnifier"
-                    id="magnifier"
-                />
-                <p id="jumystap">JumysTap</p>
-            </div>
-            <div class="menu">
-                <button>Home</button>
-                <button>About us</button>
-                <button>How it works</button>
-                <button id="get_started">Get Started</button>
-            </div>
-        </header>
-        <main>
-            <div class="description">
-                <div class="info">
-                    <h1>Get hired for your skills, not experience</h1>
-                </div>
-                <div class="visual_content">
-                    <h1></h1>
-                </div>
-            </div>
-            <div class="how_it_works"></div>
-        </main>
-        <footer></footer>
-    </body>
+  <body>
+    <header class="navbar">
+      <div class="logo">
+        <img src="images/magnifier 1.png" alt="magnifier" id="magnifier" />
+        <p id="jumystap">JumysTap</p>
+      </div>
+      <div class="menu">
+        <button>Home</button>
+        <button>About us</button>
+        <button>How it works</button>
+        <button id="get_started">Get Started</button>
+      </div>
+    </header>
+    <main>
+      <div class="description">
+        <div class="info">
+          <h1>Get hired for your skills, not experience</h1>
+        </div>
+        <div class="visual_content">
+          <h1></h1>
+        </div>
+      </div>
+      <div class="how_it_works"></div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
