--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Kanit"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter"
-      rel="stylesheet"
-    />
-    <link
       rel="icon"
       href="https://www.iconpacks.net/icons/2/free-magnifier-icon-2915-thumb.png"
       type="image/x-icon"
@@ -23,14 +15,14 @@
   <body>
     <header class="navbar">
       <div class="logo">
-        <img src="images/magnifier 1.png" alt="magnifier" id="magnifier" />
+        <img src="images/logo.png" alt="logo" />
         <p id="jumystap">JumysTap</p>
       </div>
       <div class="menu">
-        <button>Home</button>
-        <button>About us</button>
-        <button>How it works</button>
-        <button id="get_started">Get Started</button>
+        <a href="">Home</a>
+        <a href="">About us</a>
+        <a href="">How it works</a>
+        <button>Get Started</button>
       </div>
     </header>
     <main>
