--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="/css/index.css" />
     <link
       rel="icon"
       href="https://www.iconpacks.net/icons/2/free-magnifier-icon-2915-thumb.png"
@@ -15,7 +15,7 @@
   <body>
     <header class="navbar">
       <div class="logo">
-        <img src="images/logo.png" alt="logo" />
+        <img src="/images/logo.png" alt="logo" />
         <p id="jumystap">JumysTap</p>
       </div>
       <div class="menu">
