changed description page

--- a/html/index.html
+++ b/html/index.html
@@ -28,10 +28,19 @@
     <main>
       <div class="description">
         <div class="info">
-          <h1>Get hired for your skills, not experience</h1>
+          <div class="text">
+            <div class="title">Get hired for your skills, not experience</div>
+            <div class="paragraph">
+              The best tool to start your career journey with. Get connected
+              with the best companies — just share your CV to get started.
+            </div>
+          </div>
+          <div class="">
+            <button>How It Works?</button>
+          </div>
         </div>
-        <div class="visual_content">
-          <h1></h1>
+        <div class="visual">
+          <img class="laptop" src="/images/girl_with_laptop.png" alt="laptop" />
         </div>
       </div>
       <div class="how_it_works"></div>
