--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,32 @@
           <img class="laptop" src="/images/girl_with_laptop.png" alt="laptop" />
         </div>
       </div>
-      <div class="how_it_works"></div>
+      <div class="how_it_works">
+        <div class="top">
+          <div class="top_description">Lorem Ipsum Description Text</div>
+          <div class="top_title">How It Works?</div>
+        </div>
+        <div class="bottom">
+          <div class="bottom_info">
+            <div class="bottom_info_image"></div>
+            <div class="bottom_info_text"></div>
+          </div>
+          <div class="bottom_info">
+            <div class="bottom_info_image"></div>
+            <div class="bottom_info_text">
+              <div class="bottom_info_title"></div>
+              <div class="bottom_info_description"></div>
+            </div>
+          </div>
+          <div class="bottom_info">
+            <div class="bottom_info_image"></div>
+            <div class="bottom_info_text">
+              <div class="bottom_info_title"></div>
+              <div class="bottom_info_description"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
