changed description page

--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,8 @@
         </div>
         <div class="visual">
           <img class="laptop" src="/images/girl_with_laptop.png" alt="laptop" />
+          <img class="dollar" src="/images/dollar.png" alt="dollar" />
+          <img class="fire" src="/images/fire.png" alt="fire" />
         </div>
       </div>
       <div class="how_it_works">
