--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,10 @@
         <div class="bottom">
           <div class="bottom_info">
             <div class="bottom_info_image"></div>
-            <div class="bottom_info_text"></div>
+            <div class="bottom_info_text">
+              <div class="bottom_info_title"></div>
+              <div class="bottom_info_description"></div>
+            </div>
           </div>
           <div class="bottom_info">
             <div class="bottom_info_image"></div>
