changed description page

--- a/html/index.html
+++ b/html/index.html
@@ -52,24 +52,30 @@
         </div>
         <div class="bottom">
           <div class="bottom_info">
-            <div class="bottom_info_image"></div>
+            <div class="bottom_info_image">
+              <img src="/images/1.png" alt="one" />
+            </div>
             <div class="bottom_info_text">
-              <div class="bottom_info_title"></div>
-              <div class="bottom_info_description"></div>
+              <div class="bottom_info_title">Show your best skills</div>
+              <div class="bottom_info_description">Upload your CV</div>
             </div>
           </div>
           <div class="bottom_info">
-            <div class="bottom_info_image"></div>
+            <div class="bottom_info_image">
+              <img src="/images/2.png" alt="two" />
+            </div>
             <div class="bottom_info_text">
-              <div class="bottom_info_title"></div>
-              <div class="bottom_info_description"></div>
+              <div class="bottom_info_title">Search for the best match</div>
+              <div class="bottom_info_description">Lorem Ipsum Description Text</div>
             </div>
           </div>
           <div class="bottom_info">
-            <div class="bottom_info_image"></div>
+            <div class="bottom_info_image">
+              <img src="/images/3.png" alt="three" />
+            </div>
             <div class="bottom_info_text">
-              <div class="bottom_info_title"></div>
-              <div class="bottom_info_description"></div>
+              <div class="bottom_info_title">Find the best opportunity</div>
+              <div class="bottom_info_description">Lorem Ipsum Description Text</div>
             </div>
           </div>
         </div>
