added input field page

--- a/html/index.html
+++ b/html/index.html
@@ -80,6 +80,18 @@
           </div>
         </div>
       </div>
+      <div class="input_field">
+        <div class="input_field_info">
+          <div class="input_field_info_text">
+            <div class="input_field_info_title"></div>
+            <div class="input_field_info_description"></div>
+            <div class="input_field_info_search">
+              <textarea name="text_field" id="text_field" cols="30" rows="1"></textarea>
+              <button>Find Job</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
