updated input field page

--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="">
-            <button>How It Works?</button>
+            <button class="button-main">How It Works?</button>
           </div>
         </div>
         <div class="visual">
@@ -66,7 +66,9 @@
             </div>
             <div class="bottom_info_text">
               <div class="bottom_info_title">Search for the best match</div>
-              <div class="bottom_info_description">Lorem Ipsum Description Text</div>
+              <div class="bottom_info_description">
+                Lorem Ipsum Description Text
+              </div>
             </div>
           </div>
           <div class="bottom_info">
@@ -75,20 +77,28 @@
             </div>
             <div class="bottom_info_text">
               <div class="bottom_info_title">Find the best opportunity</div>
-              <div class="bottom_info_description">Lorem Ipsum Description Text</div>
+              <div class="bottom_info_description">
+                Lorem Ipsum Description Text
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="input_field">
         <div class="input_field_info">
-          <div class="input_field_info_text">
-            <div class="input_field_info_title"></div>
-            <div class="input_field_info_description"></div>
-            <div class="input_field_info_search">
-              <textarea name="text_field" id="text_field" cols="30" rows="1"></textarea>
-              <button>Find Job</button>
-            </div>
+          <div class="input_field_info_title">Lets Get Started</div>
+          <div class="input_field_info_description">
+            The best tool to start your career journey with. Get connected with
+            the best companies — just share your CV to get started.
+          </div>
+          <div class="input_field_info_search">
+            <input
+              type="text"
+              name="search"
+              id="search"
+              placeholder="Search for job by keywords"
+            />
+            <button class="button-main">Find Job</button>
           </div>
         </div>
       </div>
