completed submission page

--- a/html/index.html
+++ b/html/index.html
@@ -102,6 +102,23 @@
           </div>
         </div>
       </div>
+      <div class="submission">
+        <div class="visual">
+          <img class="laptop" src="/images/guy_with_laptop.png" alt="laptop2" />
+        </div>
+        <div class="info">
+          <div class="text">
+            <div class="title">Upload your CV</div>
+            <div class="paragraph">
+              The best tool to start your career journey with. Get connected
+              with the best companies — just share your CV to get started.
+            </div>
+          </div>
+          <div class="">
+            <button class="button-main"><span class="upload_icon"></span>Upload</button>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
