--- a/html/index.html
+++ b/html/index.html
@@ -115,11 +115,30 @@
             </div>
           </div>
           <div class="">
-            <button class="button-main"><span class="upload_icon"></span>Upload</button>
+            <button class="button-main">
+              <span class="upload_icon"></span>Upload
+            </button>
           </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="navbar">
+      <div class="footer_top">
+        <div class="menu">
+          <a href="">Home</a>
+          <a href="">About us</a>
+          <a href="">How it works</a>
+          <a href=""><img src="/images/twitter.png" alt="twitter"></a>
+          <a href=""><img src="/images/instagram.png" alt="instagram"></a>
+        </div>
+        <div class="footer_text">
+          Credits: photos from Unsplash.com, icons from Icons8, graphics from
+          craftwork.design, font Kanit from fonts.google.
+        </div>
+      </div>
+      <div class="made">
+        <a href="">Made with ✨❤️ at nFactorial in 2022.</a>
+      </div>
+    </footer>
   </body>
 </html>
